--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -7,6 +7,7 @@ ENV GOLANG_VERSION=1.25.5
 RUN apt-get update && \
     apt-get install -y --no-install-recommends \
     curl \
+    netcat \
     git \
     jq \
     wget \
